--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,8 +9,7 @@ decorator==4.1.2
 entrypoints==0.2.3
 enum34==1.1.6
 funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.2.0
+futures=3.1.1
 html5lib==0.9999999
 ipykernel==4.7.0
 ipython==5.5.0
