--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,7 +9,8 @@ decorator==4.1.2
 entrypoints==0.2.3
 enum34==1.1.6
 funcsigs==1.0.2
-futures=3.1.1
+futures==3.1.1
+h5py==2.7.1
 html5lib==0.9999999
 ipykernel==4.7.0
 ipython==5.5.0
@@ -29,6 +30,7 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.2.2
 numpy==1.13.3
+pandas==0.21.1
 pandocfilters==1.4.2
 pathlib2==2.3.0
 pbr==3.1.1
@@ -39,12 +41,16 @@ protobuf==3.5.0.post1
 ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.6.1
+pytz==2017.3
 pyzmq==16.0.3
 qtconsole==4.3.1
 scandir==1.6
+scikit-learn==0.19.1
+scipy==1.0.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
+sklearn==0.0
 tensorflow==1.4.1
 tensorflow-tensorboard==0.4.0rc3
 terminado==0.8.1
