--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ backports.weakref==1.0.post1
 bleach==1.5.0
 certifi==2017.11.5
 configparser==3.5.0
+cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
 enum34==1.1.6
@@ -24,6 +25,7 @@ jupyter-console==5.2.0
 jupyter-core==4.4.0
 Markdown==2.6.10
 MarkupSafe==1.0
+matplotlib==2.1.1
 mistune==0.8.3
 mock==2.0.0
 nbconvert==5.3.1
@@ -40,6 +42,7 @@ prompt-toolkit==1.0.15
 protobuf==3.5.0.post1
 ptyprocess==0.5.2
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 pyzmq==16.0.3
