--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -63,3 +63,14 @@ traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.13
 widgetsnbextension==3.0.8
+bcolz>=1.1.2
+isoweek>=1.3.3
+jedi>=0.10.2
+olefile>=0.44
+opencv-python>=3.3.0.10
+pandas_summary>=0.0.41
+Pillow>=4.2.1
+PyYAML>=3.12
+seaborn>=0.8.1
+tqdm>=4.15.0
+webencodings>=0.5.1
