--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 backports-abc==0.5
 backports.shutil-get-terminal-size==1.0.0
 backports.weakref==1.0.post1
+bcolz==1.1.2
 bleach==1.5.0
 certifi==2017.11.5
 configparser==3.5.0
@@ -17,6 +18,8 @@ ipykernel==4.7.0
 ipython==5.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.0.5
+isoweek==1.3.3
+jedi==0.11.1
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter==1.0.0
@@ -32,12 +35,17 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.2.2
 numpy==1.13.3
+olefile==0.44
+opencv-python==3.4.0.12
 pandas==0.21.1
+pandas-summary==0.0.41
 pandocfilters==1.4.2
+parso==0.1.1
 pathlib2==2.3.0
 pbr==3.1.1
 pexpect==4.3.1
 pickleshare==0.7.4
+Pillow==5.0.0
 prompt-toolkit==1.0.15
 protobuf==3.5.0.post1
 ptyprocess==0.5.2
@@ -45,32 +53,26 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
+PyYAML==3.12
 pyzmq==16.0.3
 qtconsole==4.3.1
 scandir==1.6
 scikit-learn==0.19.1
 scipy==1.0.0
+seaborn==0.8.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
 sklearn==0.0
 tensorflow==1.4.1
+tensorflow-gpu==1.4.1
 tensorflow-tensorboard==0.4.0rc3
 terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.2
+tqdm==4.19.5
 traitlets==4.3.2
 wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.13
 widgetsnbextension==3.0.8
-bcolz>=1.1.2
-isoweek>=1.3.3
-jedi>=0.10.2
-olefile>=0.44
-opencv-python>=3.3.0.10
-pandas_summary>=0.0.41
-Pillow>=4.2.1
-PyYAML>=3.12
-seaborn>=0.8.1
-tqdm>=4.15.0
-webencodings>=0.5.1
